--- a/scss/layout/_middle.scss
+++ b/scss/layout/_middle.scss
@@ -9,6 +9,91 @@
         }
         &-interests{
             width:78vw;
+            & #modal{
+                &-dnd{
+                    display: none;
+                    justify-content:center;
+                    align-items:center;
+                    position: fixed;
+                    z-index: 1;
+                    left: 0;
+                    top: 0;
+                    bottom:0;
+                    width: 100%;
+                    height: 100%;
+                    overflow: auto;
+                    background-color: rgb(0,0,0);
+                    background-color: rgba(0,0,0,0.4);
+                }
+                &-programming{
+                    display: none;
+                    justify-content:center;
+                    align-items:center;
+                    position: fixed;
+                    z-index: 1;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    overflow: auto;
+                    background-color: rgb(0,0,0);
+                    background-color: rgba(0,0,0,0.4);
+                }
+                &-gaming{
+                    display: none;
+                    justify-content:center;
+                    align-items:center;
+                    position: fixed;
+                    z-index: 1;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    overflow: auto;
+                    background-color: rgb(0,0,0);
+                    background-color: rgba(0,0,0,0.4);
+                }
+                &-reading{
+                    display: none;
+                    justify-content:center;
+                    align-items:center;
+                    position: fixed;
+                    z-index: 1;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    overflow: auto;
+                    background-color: rgb(0,0,0);
+                    background-color: rgba(0,0,0,0.4);
+                }
+            }
+            .modal{
+                &-content{
+                    background-color: #fefefe;
+                    margin: 15% auto; 
+                    padding: 20px;
+                    border: 1px solid #888;
+                    width: 50vw;
+                    height:100%;
+                }
+                &-close{
+                    position:absolute;
+                    color: #aaa;
+                    float: right;
+                    font-size: 28px;
+                    font-weight: bold;
+                    border:1px solid black;
+                    padding:0 8px;
+                    border-radius:20px;
+                    background-color:red;
+                    &:hover, &:focus{
+                        color: black;
+                        text-decoration: none;
+                        cursor: pointer;
+                    }
+                }
+            }
             .slick-dots{
                 padding-bottom:50px;
             }
