--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -102,8 +102,15 @@ footer{
             & .btn-submit{
                 display:block;
                 margin-right:auto;
+                background-color: rgba(255, 255, 255, 0.742);
+                border-radius: 10px;
+                border:solid 1px black;
                 &::placeholder{
                     color:black;
+                }
+                &:hover{
+                    background-color: rgba(66, 66, 66, 0.742);
+                    color:white;
                 }
             }
         }
