--- a/scss/layout/_middle.scss
+++ b/scss/layout/_middle.scss
@@ -74,8 +74,20 @@
                     margin: 15% auto; 
                     padding: 20px;
                     border: 1px solid #888;
-                    width: 50vw;
-                    height:100%;
+                    height:50vh;
+                    width:100%;
+                    @include mq('m'){
+                        height:75%;
+                        width:50vw;
+                    }
+                    @include mq('l'){
+                        height:100%;
+                        width:50vw;
+                    }
+                    @include mq('xl'){
+                        height:100%;
+                        width:50vw;
+                    }
                 }
                 &-close{
                     position:absolute;
