--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,4 +29,5 @@
         'components/form',
         'components/icons',
         'components/images',
-        'components/nav';
+        'components/nav',
+        'components/status';
